# aletheia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml
deploy/: README.md
deploy/docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
deploy/terraform/: .gitignore  main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf
docs/: phase-2-implementation.md  phase-3-implementation.md  phase-6-implementation.md  product-vision.md  technical-architecture.md
src/aletheia/: __init__.py
src/aletheia/cli/: __init__.py  helpers.py  leetcode.py  links.py  main.py
src/aletheia/core/: __init__.py  fire.py  git_sync.py  graph.py  metrics.py  models.py  queue.py  scheduler.py  storage.py
src/aletheia/leetcode/: __init__.py  auth.py  service.py
src/aletheia/llm/: __init__.py  prompts.py  service.py
src/aletheia/web/: __init__.py  app.py  dependencies.py  katex.py
src/aletheia/web/routes/: __init__.py  review.py  search.py  stats.py
src/aletheia/web/templates/: base.html  review.html  search.html  stats.html
src/aletheia/web/templates/partials/: card.html  rating.html  search_results.html
tests/: test_fire.py  test_git_sync.py  test_graph.py  test_implementation_cards.py  test_leetcode.py  test_leetcode_cli.py  test_lifecycle.py  test_links.py  test_llm.py  test_metrics.py  test_models.py  test_queue.py  test_scheduler.py  test_search.py  test_show_review_info.py  test_stats.py  test_storage.py  test_web.py
